test/sema/typeck/lambda/self-unavailable.out
error: `self` can only be used in methods not functions
--> self-unavailable.dora:1:15
 | fn f() { || { self; }; }
                 ~~~~
 | 
1 error found.
